--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "tech-blog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.0.0",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  }
+    "name": "tech-blog",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "docker compose up -d && next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@directus/sdk": "^10.3.3",
+        "@tailwindcss/typography": "^0.5.9",
+        "@types/node": "20.0.0",
+        "@types/react": "18.2.5",
+        "@types/react-dom": "18.2.4",
+        "animejs": "^3.2.1",
+        "autoprefixer": "10.4.14",
+        "dayjs": "^1.11.7",
+        "eslint": "8.40.0",
+        "eslint-config-next": "13.4.1",
+        "next": "13.4.1",
+        "postcss": "8.4.23",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.8.0",
+        "react-markdown": "^8.0.7",
+        "tailwindcss": "3.3.2",
+        "typescript": "5.0.4"
+    },
+    "devDependencies": {
+        "@types/animejs": "^3.1.7"
+    }
 }
